--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = mssql+aioodbc:///?odbc_connect=DRIVER%3DODBC+Driver+18+for+SQL+Server%3BSERVER%3Dvijaydb.database.windows.net%3BDATABASE%3Dtest%3BUID%3Dvijayadmin%3BPWD%3D11Vijs11%2A%23%3BEncrypt%3Dyes%3BTrustServerCertificate%3Dno%3BConnection+Timeout%3D30
+sqlalchemy.url = env:DATABASE_URL
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
