--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10.16
+          python-version: 3.11  # Changed from 3.10.16
 
       - name: Install dependencies
         run: |
