--- a/.github/workflows/develop_gategroup.yml
+++ b/.github/workflows/develop_gategroup.yml
@@ -1,8 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
-name: Build and deploy Python app to Azure Web App - gategroup
+name: Build and Deploy FastAPI Docker App to Azure App Service
 
 on:
   push:
@@ -11,71 +7,31 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up Python version
-        uses: actions/setup-python@v5
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          python-version: '3.11'
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Create and start virtual environment
+      - name: Log in to Azure Container Registry (ACR)
         run: |
-          python -m venv venv
-          source venv/bin/activate
-      
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+          echo "${{ secrets.ACR_PASSWORD }}" | docker login myregistry123.azurecr.io \
+            -u ${{ secrets.ACR_USERNAME }} --password-stdin
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Build and push Docker image to ACR
+        run: |
+          docker build -t myregistry123.azurecr.io/fastapi-app:latest .
+          docker push myregistry123.azurecr.io/fastapi-app:latest
 
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v4
+      - name: Deploy to Azure Web App (Linux Container)
+        uses: azure/webapps-deploy@v2
         with:
-          name: python-app
-          path: |
-            release.zip
-            !venv/
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: python-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_28B6C45EA32841838AB0138A82B42C5A }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_241B8A73C95E4C5C83B8F687B9F4C5C6 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_DDF8B30D43C8445786CC83ED582DF7FE }}
-
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
-        with:
-          app-name: 'gategroup'
-          slot-name: 'Production'
-          
+          app-name: gategroup # 🔁 Replace with your App Service name
+          slot-name: Production
+          images: myregistry123.azurecr.io/fastapi-app:latest
