added azure login keys

--- a/.github/workflows/develop_gategroup.yml
+++ b/.github/workflows/develop_gategroup.yml
@@ -1,11 +1,3 @@
-name: Build and Deploy FastAPI Docker App to Azure App Service
-
-on:
-  push:
-    branches:
-      - develop
-  workflow_dispatch:
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -14,10 +6,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      - name: Build and push Docker image to Docker Hub
+      - name: Build and push Docker image
         run: |
           docker build -t vijaydev11/fastapi-app:latest .
           docker push vijaydev11/fastapi-app:latest
